edit index and mensaf files add a hypertext link in the index file, add a heading to mensaf file

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head> 
     <body>
         <h1>Odin recipies</h1>
+        <a href="recipies/mensaf.html">Click here to see mensaf recipie</a>
     </body>
 </html>
