--- a/recipies/mensaf.html
+++ b/recipies/mensaf.html
@@ -10,5 +10,12 @@
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR2JR5LLk8DOsXjZnBQ1sSvahh0BuHmvIcxIg&usqp=CAU" alt="a delicous picture of mensaf">
     <h2>Description</h2>
     <p>the mensaf is yummy it is so incedibly yummy that i eat it sometimes and it is so delecious that it is made of rice and meat and nuts and nice sauce</p>
+    <h2>Ingrediants</h2>
+    <ul>
+        <li>lamb</li>
+        <li>rice</li>
+        <li>almonds</li>
+
+    </ul>
 </body>
 </html>
