Add steps to making the dish
Add 4 steps describing the process of cooking mensaf

--- a/recipies/mensaf.html
+++ b/recipies/mensaf.html
@@ -17,5 +17,12 @@
         <li>almonds</li>
 
     </ul>
+    <h2>Steps to making the dish</h2>
+    <ol>
+        <li>Put the lamb in 6 cups of water, bring to a boil and add the spices</li>
+        <li>When the water comes to a boil turn down to a slow simmer</li>
+        <li>Cook for 2 hours or until the meat is tender, Add more boiling water if necessary</li>
+        <li>nce the meat is done, pour through a sieve and preserve the water</li>
+    </ol>
 </body>
 </html>
