--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     </head> 
     <body>
         <h1>Odin recipies</h1>
-        <a href="recipies/mensaf.html">Click here to see mensaf recipie</a>
+        <ul>
+            <li>        <a href="recipies/mensaf.html">Click here to see mensaf recipie</a>
+            </li>
+            <li>        <a href="recipies/pizza.html">Click here to see pizza recipie</a>
+            </li>
+            <li>        <a href="recipies/lasagna.html">Click here to see lasagna recipie</a>
+            </li>
+
+        </ul>
+
     </body>
 </html>
